--- a/style.css
+++ b/style.css
@@ -141,22 +141,18 @@ header {
 }
 
 .ag-timeline_title {
-    background-image: url(https://raw.githubusercontent.com/SochavaAG/example-mycode/master/pens/timeline/images/bg.jpg);
     background-repeat: no-repeat;
     background-position: 50% 50%;
 
     background-size: cover;
     -webkit-background-clip: text;
     background-clip: text;
-    text-fill-color: transparent;
     color: transparent;
-
     font-size: 80px;
 }
 
 .ag-timeline_item {
     margin: 0 0 50px;
-
     position: relative;
 }
 
@@ -259,7 +255,6 @@ header {
     margin: -77px 0 0;
     /* background-color: #282828; */
     background-color: #BFACE2;
-
     opacity: 0;
 
     -webkit-border-radius: 6px;
@@ -336,13 +331,15 @@ header {
     left: 0;
 }
 
-.ag-timeline-card_img {
-    width: 100%;
-}
-
-
 .ag-timeline-card_info {
     padding: 20px 30px;
+}
+
+.ag-timeline-card_img-box {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
 }
 
 .ag-timeline-card_title {
