--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;400;600&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -18,10 +20,36 @@
     src: url('/Mufanpfs-owKgx.otf') format('opentype');
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #574f4f;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #ed6a5a;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #ed6b5a8f;
+}
+
 :root {
     --heading-font: customfont;
     --navbar: 'Lato', sans-serif;
     --sub-heading: 'Shantell Sans', cursive;
+    --head-font: 'Libre Baskerville',
+        serif;
     --paragraph: 'Nunito Sans', sans-serif;
     --color1: #5CA4A9;
     --color2: #ed6a5a;
@@ -66,22 +94,20 @@ nav img {
 
 header {
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-gap: 2rem;
+    grid-template-columns: 1.5fr 0.5fr;
+    grid-gap: 1rem;
 }
 
 .header-content h2 {
-    font-family: var(--heading-font);
+    font-family: var(--head-font);
     font-size: 56px;
     margin: 0px 0 20px;
-    text-align: justify;
-    /* color: #804674; */
-    /* color: #7286D3; */
     background: -webkit-linear-gradient(50deg, #7286d3, #ed6a5a, #333);
     -webkit-background-clip: text;
     background-clip: text;
     -webkit-text-fill-color: transparent;
     letter-spacing: 0.07rem;
+    text-transform: capitalize;
 }
 
 .header-content p {
@@ -103,7 +129,7 @@ header {
 }
 
 .ag-section h2 {
-    font-family: var(--heading-font);
+    font-family: var(--head-font);
     font-size: 56px;
     text-align: center;
     margin: 8% 0;
@@ -245,7 +271,7 @@ header {
     letter-spacing: 0.05rem;
     font-size: 31px;
     color: #F16767;
-    color: #3E54AC;
+    color: #415cc9;
 
 }
 
@@ -272,6 +298,10 @@ header {
     transition: transform .5s, opacity .5s;
 
     position: relative;
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 26px;
+    box-shadow: 0px 35px 68px 0px rgba(54, 11, 90, 0.5), inset 0px -8px 16px 0px rgba(54, 11, 90, 0.6), inset 0px 11px 28px 0px rgb(255, 255, 255);
 }
 
 .ag-timeline_item:nth-child(2n+1) .ag-timeline-card_item {
@@ -456,4 +486,78 @@ header {
         width: 960px;
     }
 
+}
+
+
+/* Nearby locations */
+.nearby-loc-grid {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* grid-gap: 2rem; */
+}
+
+.nearby-loc-grid h2 {
+    font-family: var(--head-font);
+    font-size: 56px;
+    margin: 28% 0;
+    text-align: center;
+    background: -webkit-linear-gradient(-80deg, #415cc9, #ffb74c, #f55959d3);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+    letter-spacing: 0.07rem;
+    text-transform: capitalize;
+}
+
+.nearby-loc {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 3rem;
+    margin: 7% 0;
+}
+
+lottie-player {
+    background-color: transparent;
+}
+
+.nearby-loc>div {
+    /* margin: 0 auto; */
+    padding: 5%;
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 1);
+    border-radius: 26px;
+    box-shadow: -35px 35px 68px 0px rgba(37, 22, 5, 0.5), inset 8px -8px 16px 0px rgba(37, 22, 5, 0.6), inset 0px 11px 28px 0px rgb(255, 255, 255);
+}
+
+.nearby-loc>div h4 {
+    font-family: var(--heading-font);
+    font-size: 28px;
+    text-transform: capitalize;
+    text-align: center;
+    color: #415cc9;
+    letter-spacing: 0.2rem;
+}
+
+.nearby-loc>div h5 {
+    font-family: var(--paragraph);
+    font-weight: 800;
+    color: #415cc9b0;
+    text-align: center;
+    margin: 0 0 10px;
+}
+
+.nearby-loc>div img {
+    display: block;
+    height: 30px;
+    margin: 0 auto;
+    /* margin: 0 10px 0 0; */
+}
+
+.nearby-loc>div p {
+    color: var(--color1);
+    font-family: var(--paragraph);
+    font-size: 16px;
+    text-transform: capitalize;
+    margin: 0 0 10px 0;
+    text-align: center;
 }
