--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    background-color: #F8F8F8;
+    /* background-color: #F8F8F8; */
 }
 
 @font-face {
@@ -561,6 +561,118 @@ lottie-player {
     text-align: center;
 }
 
+/* FAQS */
+.faq-head h2 {
+    font-family: var(--head-font);
+    text-align: center;
+    letter-spacing: 0.07rem;
+    margin: 8% 0;
+    font-size: 56px;
+    background: -webkit-linear-gradient(-80deg, #415cc9, #ffb74c, #f55959d3);
+    -webkit-background-clip: text;
+    background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+
+
+.faq-container {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
+.faq {
+    background-color: transparent;
+    font-family: var(--sub-heading);
+    border: 1px solid #9fa4a8;
+    font-size: 18px;
+    color: #3b5998;
+    border-radius: 10px;
+    margin: 20px 0;
+    padding: 30px;
+    position: relative;
+    overflow: hidden;
+    transition: 0.3s ease;
+}
+
+.faq.active {
+    background-color: rgba(255, 255, 255, 0.152);
+    box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1), 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.faq.active::before,
+.faq.active::after {
+    content: '\f075';
+    font-family: 'Font Awesome 5 Free';
+    color: #2ecc71;
+    font-size: 7rem;
+    position: absolute;
+    opacity: 0.2;
+    top: 20px;
+    left: 20px;
+    z-index: 0;
+}
+
+.faq.active::before {
+    color: #3498db;
+    top: -10px;
+    left: -30px;
+    transform: rotateY(180deg);
+}
+
+.faq-title {
+    margin: 0 35px 0 0;
+}
+
+.faq-text {
+    display: none;
+    margin: 30px 0 0;
+    font-weight: 100;
+}
+
+.faq.active .faq-text {
+    display: block;
+}
+
+.faq-toggle {
+    background-color: transparent;
+    color: #fd5949;
+    border: 0;
+    border-radius: 50%;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px;
+    padding: 0;
+    position: absolute;
+    top: 30px;
+    right: 30px;
+    height: 30px;
+    width: 30px;
+}
+
+.faq-toggle:focus {
+    outline: 0;
+}
+
+.faq-toggle .fa-times {
+    display: none;
+}
+
+.faq.active .faq-toggle .fa-times {
+    color: #fff;
+    display: block;
+}
+
+.faq.active .faq-toggle .fa-chevron-down {
+    display: none;
+}
+
+.faq.active .faq-toggle {
+    background-color: #f07021;
+}
+
+/* FOOTER */
 
 footer {
     background-color: #251605;
@@ -660,6 +772,3 @@ footer i {
     letter-spacing: 0.08rem;
     font-weight: 100;
 }
-
-
-/* about */
