--- a/style.css
+++ b/style.css
@@ -57,14 +57,15 @@ html {
 
 nav {
     display: flex;
-    justify-content: space-between;
+    justify-content: space-evenly;
     align-items: center;
     text-align: center;
     margin: 0 20px;
 }
 
 nav img {
-    height: 150px;
+    margin: 10px 0;
+    height: 100px;
 }
 
 .navbar-items {
@@ -98,7 +99,7 @@ header {
     grid-gap: 1rem;
 }
 
-.header-content h2 {
+.header-content h1 {
     font-family: var(--head-font);
     font-size: 56px;
     margin: 0px 0 20px;
@@ -108,6 +109,10 @@ header {
     -webkit-text-fill-color: transparent;
     letter-spacing: 0.07rem;
     text-transform: capitalize;
+}
+
+hr {
+    width: 60%;
 }
 
 .header-content p {
@@ -374,11 +379,13 @@ header {
 .ag-timeline-card_title {
     display: none;
     margin: 10px 0 0;
-
-    font-family: 'ESL Legend', sans-serif;
+    line-height: 1.6rem;
+    letter-spacing: 0.06rem;
+    font-family: var(--heading-font);
     font-weight: bold;
     font-size: 28px;
-    color: #FF0;
+    font-weight: 100;
+    color: #415cc9;
 }
 
 .ag-timeline-card_desc {
@@ -492,6 +499,7 @@ header {
 .nearby-loc-grid {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    align-items: center;
     /* grid-gap: 2rem; */
 }
 
@@ -517,6 +525,8 @@ header {
 
 lottie-player {
     background-color: transparent;
+    width: 350px;
+    height: 300px;
 }
 
 .nearby-loc>div {
@@ -559,6 +569,14 @@ lottie-player {
     text-transform: capitalize;
     margin: 0 0 10px 0;
     text-align: center;
+}
+
+.nearby-lottieplayer {
+    height: 450px;
+}
+
+.nearby-loc-lottie_player {
+    height: 140px;
 }
 
 /* FAQS */
@@ -730,7 +748,7 @@ footer i {
 .footer-grid img {
     display: block;
     margin: 0 auto;
-    height: 200px;
+    height: 150px;
 }
 
 .contact-no h4 a {
@@ -771,4 +789,356 @@ footer i {
     font-family: var(--sub-heading);
     letter-spacing: 0.08rem;
     font-weight: 100;
+}
+
+
+/* ************************** */
+/* MOBILE RESPONSIVE */
+/* ************************** */
+
+@media only screen and (max-width: 1080px) {
+    .inner-width {
+        padding: 7% 8%;
+    }
+
+    .header-content h1 {
+        font-size: 46px;
+    }
+
+    .header-photos img {
+        width: 525px;
+    }
+
+    .ag-section h2 {
+        font-size: 46px;
+    }
+
+    .ag-format-container {
+        width: 800px;
+    }
+
+    .ag-timeline-card_meta {
+        font-size: 28px;
+    }
+
+    .nearby-loc-grid h2 {
+        font-size: 46px;
+    }
+
+    .nearby-loc {
+        grid-template-columns: 1fr 1fr;
+    }
+
+    .faq-head h2 {
+        font-size: 46px;
+    }
+
+    .contact-no h4 a {
+        font-size: 22px;
+    }
+
+    .social-link {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .social-link i {
+        margin: 0 0 20px;
+    }
+}
+
+
+@media only screen and (max-width: 780px) {
+    .inner-width {
+        padding: 6% 6.5%;
+    }
+
+    nav img {
+        height: 120px;
+    }
+
+    .navbar-items li a {
+        font-size: 16px;
+    }
+
+    .header-photos img {
+        height: 350px;
+        width: 400px;
+    }
+
+    .header-content h1 {
+        font-size: 36px;
+    }
+
+    .header-content p {
+        font-size: 15px;
+    }
+
+    .ag-section h2 {
+        font-size: 36px;
+    }
+
+    .ag-timeline-card_info {
+        width: 350px;
+        text-align: center;
+    }
+
+    .ag-timeline-card_title {
+        font-size: 23px;
+    }
+
+    .nearby-loc-grid h2 {
+        font-size: 36px;
+    }
+
+    .nearby-loc {
+        grid-gap: 1.2rem;
+        margin: 2.5% 0;
+    }
+
+    .nearby-loc>div h4 {
+        font-size: 24px;
+    }
+
+    .faq-head h2 {
+        font-size: 36px;
+    }
+
+    footer h2 span {
+        font-size: 36px;
+    }
+
+    .footer-grid {
+        grid-gap: 1rem;
+    }
+
+    .footer-grid img {
+        height: 120px;
+    }
+
+    .social-link {
+        display: block;
+    }
+
+    .social-link i {
+        padding: 11px;
+    }
+}
+
+
+@media only screen and (max-width: 450px) {
+    nav {
+        margin: 0 12px;
+        justify-content: space-evenly;
+    }
+
+    nav img {
+        height: 60px;
+        margin: 10px 0;
+    }
+
+    .navbar-items {
+        padding: 10px;
+    }
+
+    .navbar-items li {
+        margin: 0;
+    }
+
+    .navbar-items li a {
+        font-size: 14px;
+    }
+
+    header {
+        grid-template-columns: 1fr;
+    }
+
+    .header-photos img {
+        width: 100%;
+    }
+
+    .header-content p {
+        margin: 20px 0;
+    }
+
+    .header-content h1 {
+        font-size: 28px;
+        text-align: center;
+    }
+
+    .ag-section h2 {
+        font-size: 28px;
+    }
+
+    .ag-format-container {
+        width: 320px;
+    }
+
+    .ag-timeline-card_title {
+        font-size: 16px;
+    }
+
+    lottie-player {
+        height: 200px;
+        width: 250px;
+    }
+
+    .ag-timeline-card_info {
+        width: 250px;
+    }
+
+    .nearby-loc-grid {
+        grid-template-columns: 1fr;
+    }
+
+    .nearby-loc-grid h2 {
+        font-size: 28px;
+        margin: 12% 7% 7%;
+    }
+
+    .nearby-lottieplayer {
+        height: 350px;
+        width: 100%;
+    }
+
+    .nearby-loc-lottie_player {
+        display: block;
+        margin: 0 auto;
+        height: 100px;
+    }
+
+    .nearby-loc {
+        grid-template-columns: 1fr;
+    }
+
+    .loc-time-dist {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+        justify-content: space-evenly;
+    }
+
+    .nearby-loc>div img {
+        height: 25px;
+    }
+
+    .loc-time-dist span {
+        font-size: 14px;
+    }
+
+    .faq-title {
+        font-size: 15px;
+    }
+
+    .faq-text {
+        font-size: 14px;
+    }
+
+    .faq-head h2 {
+        font-size: 28px;
+    }
+
+    .footer-grid {
+        grid-template-columns: 1fr;
+    }
+
+    footer h2 span {
+        font-size: 24px;
+    }
+
+    footer h3 {
+        font-size: 12px;
+    }
+
+    .footer-grid img {
+        height: 80px;
+    }
+
+    .contact-no h4 a {
+        font-size: 17px;
+    }
+
+    .social-link i {
+        font-size: 14px;
+        padding: 8px;
+    }
+
+    .footer-copyright h4 {
+        font-size: 12px;
+    }
+}
+
+@media only screen and (max-width: 380px) {
+    .navbar-items li {
+        padding: 7px;
+    }
+
+    nav img {
+        height: 50px;
+    }
+
+    .navbar-items li a {
+        font-size: 13px;
+    }
+
+    .header-content h1 {
+        font-size: 24px;
+    }
+
+    .header-content p {
+        font-size: 13px;
+
+    }
+
+    .ag-section h2 {
+        font-size: 24px;
+    }
+
+    .ag-timeline-card_title {
+        font-size: 14px;
+    }
+
+    lottie-player {
+        width: 215px;
+    }
+
+    .ag-timeline-card_info {
+        width: 220px;
+    }
+
+    .nearby-loc-grid h2 {
+        font-size: 24px;
+    }
+
+    .nearby-lottieplayer {
+        height: 250px;
+    }
+
+    .nearby-loc>div h4 {
+        font-size: 20px;
+    }
+
+    .faq-head h2 {
+        font-size: 24px;
+    }
+
+    .faq-title {
+        font-size: 13px;
+    }
+
+    .faq-text {
+        font-size: 13px;
+    }
+
+    footer h2 span {
+        font-size: 22px;
+    }
+
+    .footer-grid img {
+        height: 70px;
+    }
+
+    .contact-no h4 a {
+        font-size: 14.5px;
+    }
 }
